[package]
authors = ["Brenden Matthews <brenden@brndn.io>"]
categories = ["cryptography", "algorithms"]
description = "Don't Roll Your Own Crypto: pure-Rust, hard to misuse cryptography library"
documentation = "https://docs.rs/dryoc"
edition = "2024"
keywords = ["cryptography", "nacl", "libsodium", "curve25519", "crypto_box"]
license = "MIT"
name = "dryoc"
readme = "README.md"
repository = "https://github.com/brndnmtthws/dryoc"
rust-version = "1.89"
version = "0.8.0"

[dependencies]
base64 = { version = "0.22", optional = true }
bitflags = "2.11"
chacha20 = { version = "0.10", features = ["zeroize"] }
curve25519-dalek = "4.1.3"
lazy_static = "1"
rand = { version = "0.10", default-features = false, features = ["sys_rng"] }
salsa20 = { version = "0.11", features = ["zeroize"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
sha2 = "0.11"
subtle = "2.6"
wincode = { version = "0.5.3", optional = true, features = ["derive"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "impl-default",
  "memoryapi",
  "minwindef",
  "std",
  "sysinfoapi",
  "winnt",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
base64 = "0.22"
hex = "0.4"
libc = "0.2"
libsodium-sys = "0.2"
proptest = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sodiumoxide = "0.2"
static_assertions = "1.1"
num-bigint = { version = "0.4", features = ["rand"] }
wincode = "0.5.3"

[features]
default = ["u64_backend"]
nightly = []
simd_backend = []
u64_backend = []
wincode = ["dep:wincode"]

[package.metadata.docs.rs]
# docs.rs uses nightly, enable feature flag to get all the juicy docs
features = ["nightly", "serde", "base64", "wincode"]
