[package]
authors = ["Brenden Matthews <brenden@brndn.io>"]
categories = ["cryptography", "algorithms"]
description = "Don't Roll Your Own Crypto: pure-Rust, hard to misuse cryptography library"
documentation = "https://docs.rs/dryoc"
edition = "2024"
keywords = ["cryptography", "nacl", "libsodium", "curve25519", "crypto_box"]
license = "MIT"
name = "dryoc"
readme = "README.md"
repository = "https://github.com/brndnmtthws/dryoc"
rust-version = "1.89"
version = "1.0.1"

[dependencies]
chacha20 = { version = "0.10", features = ["legacy", "zeroize"] }
curve25519-dalek = "4.1.3"
rand = { version = "0.10", default-features = false, features = ["sys_rng"] }
salsa20 = { version = "0.11", features = ["zeroize"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
sha2 = { version = "0.11", features = ["zeroize"] }
sha3_impl = { package = "sha3", version = "0.12", features = ["zeroize"] }
subtle = "2.6"
wincode = { version = "0.5.3", optional = true, features = ["derive"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "impl-default",
  "memoryapi",
  "minwindef",
  "std",
  "sysinfoapi",
  "winnt",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3"

[dev-dependencies]
base64 = "0.22"
hex = "0.4"
libc = "0.2"
num-bigint = { version = "0.4", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
static_assertions = "1.1"
wincode = "0.5.3"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dev-dependencies]
libsodium-sys = "0.2"
proptest = "1"
sodiumoxide = "0.2"

[features]
base64 = []
default = ["base64", "u64_backend", "protected"]
nightly = ["protected"]
protected = []
simd_backend = []
u64_backend = []
wincode = ["dep:wincode"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(dryoc_native_tests)",
  "cfg(tarpaulin)",
] }

[package.metadata.docs.rs]
# docs.rs uses nightly, enable feature flag to get all the juicy docs
features = ["nightly", "serde", "base64", "wincode"]
